--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "mui-chips-input": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
